Fixing avatar padding on tablet

--- a/assets/theme/clixtv/src/ui/header/header.less
+++ b/assets/theme/clixtv/src/ui/header/header.less
@@ -137,7 +137,7 @@
         .header-avatar-container {
             position: relative;
             margin-right: @common-mobile-padding;
-            @media (min-width: @screen-md) {
+            @media (min-width: @screen-lg) {
                 margin-left: 20px;
                 margin-right: 0;
             }
